--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.5",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "1.3.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-root-toast": "^3.1.2",
-    "react-navigation": "^3.12.1"
+    "react-native-sqlite-storage": "^4.0.0",
+    "react-navigation": "^3.12.1",
+    "eslint": "^6.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
