--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "eslint": "^6.2.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "1.3.0",
@@ -16,17 +17,22 @@
     "react-native-root-toast": "^3.1.2",
     "react-native-sqlite-storage": "^4.0.0",
     "react-navigation": "^3.12.1",
-    "eslint": "^6.2.2"
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "@react-native-community/eslint-config": "^0.0.5",
+    "@types/react": "^16.9.2",
+    "@types/react-native": "^0.60.9",
     "babel-jest": "^24.9.0",
     "eslint": "^6.2.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.6",
+    "typescript": "^3.6.2"
   },
   "jest": {
     "preset": "react-native"
