--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,6 +133,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+         missingDimensionStrategy 'react-native-sqlite-storage', 'general'
     }
     splits {
         abi {
@@ -190,6 +191,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    // implementation project(':react-native-sqlite-storage') // 引入SQLite库需要添加此代码
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
@@ -198,7 +200,8 @@ dependencies {
     } else {
       implementation jscFlavor
     }
-    
+
+
 }
 
 // Run this once to be able to run the application with BUCK
