--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,7 +29,7 @@ target 'rnTest' do
 
 
   # 数据库sqlite操作
-  pod 'React', :path => '../node_modules/react-native/'
+  pod 'react-native-sqlite-storage', :path => '../node_modules/react-native-sqlite-storage'
 
   target 'rnTestTests' do
     inherit! :search_paths
