--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
   package="com.rntest">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <!-- 
+      用于定位使用，如果需要使用fine精确定位，还需要添加下面一行代码
+      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+     -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
