--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-location": "^2.5.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-root-toast": "^3.1.2",
     "react-native-sqlite-storage": "^4.1.0",
+    "react-native-storage": "^1.0.1",
     "react-navigation": "^3.12.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
