--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "art": "^0.10.3",
     "eslint": "^6.2.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
