--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/masked-view": "^0.1.6",
     "art": "^0.10.3",
     "eslint": "^6.2.2",
     "react": "16.8.6",
@@ -17,9 +18,13 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-location": "^2.5.0",
     "react-native-reanimated": "^1.2.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "^2.0.0-alpha.23",
     "react-native-sqlite-storage": "^4.1.0",
     "react-native-storage": "^1.0.1",
-    "react-navigation": "^3.12.1",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.14",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
