登录切换完成

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -198,6 +198,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
 
+    //  realm 数据存储框架
+    implementation project(':realm')
+
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
       debugImplementation files(hermesPath + "hermes-debug.aar")
