--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,7 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+# 指定源路径
+source 'https://github.com/CocoaPods/Specs.git'
 
 target 'rnTest' do
   # Pods for rnTest
